# customer-feedback

./: .gitignore  .pre-commit-config.yaml  README.md
backend/: .dockerignore  .env.example  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py  sonar-project.properties
backend/app/: __init__.py  config.py  errors.py  main.py
backend/app/api/: openapi.yaml
backend/app/api/controllers/: cafe_controller.py  feedback_controller.py
backend/app/db/: database.py  models.py
backend/app/repositories/: cafe_repository.py  feedback_repository.py
backend/app/services/: cafe_service.py  feedback_service.py
backend/bruno/: bruno.json
backend/bruno/environments/: local.bru
backend/bruno/feedback/: create-feedback.bru  list-cafes.bru  list-feedback.bru
backend/tests/: conftest.py  test_feedback_api.py  test_feedback_validation.py
docs/: backend-architecture.md  cafe-feedback-plan.md  cafe-feedback-scenarios.md
frontend-spa/: AGENTS.md  eslint.config.js  jest.config.cjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  vite.config.ts
frontend-spa/src/: App.tsx  constants.ts  index.css  types.ts
frontend-spa/src/__tests__/: App.test.tsx  FeedbackForm.test.tsx  FeedbackList.test.tsx  feedback.test.ts
frontend-spa/src/__tests__/__snapshots__/: FeedbackForm.test.tsx.snap  (+1 more)
frontend-spa/src/components/: CafeSelect.tsx  FeedbackForm.tsx  FeedbackList.tsx  Field.tsx  HighlightSelect.tsx  RatingInput.tsx  StatusMessage.tsx
frontend-spa/src/lib/: feedback.ts  feedbackApi.ts
scripts/: pre_commit.py
