[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "customer-feedback-api"
version = "0.1.0"
description = "API-first backend for customer feedback"
readme = "README.md"
requires-python = ">=3.13,<3.15"
authors = [
    { name = "Hermes Herrera" },
]
dependencies = [
    "connexion[swagger-ui,uvicorn]>=3.3.0",
    "pydantic>=2.12.0",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "pyrefly>=1.1.1",
    "pysonar>=1.6.0.4905",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
    "vulture>=2.14",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.coverage.run]
relative_files = true
source = ["app"]

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.vulture]
paths = ["app", "tests"]
min_confidence = 80

[tool.pyrefly]
project-includes = ["app", "tests", "run.py"]
python-version = "3.13"
